mux-compiler/tests/snapshots/executable_integration__executable_integration__parser_missing_return_type.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux run /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_return_type.mux`
error: Expected type
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/parser_missing_return_type.mux:2:19
   |
 2 | func bar() returns
   |                   ^
